<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!--    <EditText-->
    <!--        android:id="@+id/edit_firstname"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:ems="10"-->
    <!--        android:layout_marginStart="@dimen/dimen_12dp"-->
    <!--        android:layout_marginTop="@dimen/dimen_12dp"-->
    <!--        android:inputType="text"-->
    <!--        android:text="@string/first_name"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/edit_lastname"-->
    <!--        app:layout_constraintHorizontal_bias="0.5"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/edit_lastname"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:ems="10"-->
    <!--        android:layout_marginEnd="@dimen/dimen_12dp"-->
    <!--        android:layout_marginTop="@dimen/dimen_12dp"-->
    <!--        android:inputType="text"-->
    <!--        android:text="@string/last_name"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.5"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/edit_firstname"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/edit_birthdate"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:ems="10"-->
    <!--        android:layout_marginStart="@dimen/dimen_12dp"-->
    <!--        android:layout_marginEnd="@dimen/dimen_12dp"-->
    <!--        android:layout_marginTop="@dimen/dimen_12dp"-->
    <!--        android:inputType="text"-->
    <!--        android:text="@string/birth_date"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/edit_firstname" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/edit_country"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:ems="10"-->
    <!--        android:layout_marginStart="@dimen/dimen_12dp"-->
    <!--        android:layout_marginEnd="@dimen/dimen_12dp"-->
    <!--        android:layout_marginTop="@dimen/dimen_12dp"-->
    <!--        android:inputType="text"-->
    <!--        android:text="@string/country"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/btn_apply"-->
    <!--        app:layout_constraintHorizontal_bias="0.5"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/edit_birthdate" />-->

    <!--    <Button-->
    <!--        android:id="@+id/btn_apply"-->
    <!--        android:layout_width="149dp"-->
    <!--        android:layout_height="45dp"-->
    <!--        android:layout_marginTop="@dimen/dimen_12dp"-->
    <!--        android:layout_marginEnd="@dimen/dimen_12dp"-->
    <!--        android:text="@string/apply"-->
    <!--        android:background="@color/gray"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.5"-->
    <!--        app:layout_constraintStart_toEndOf="@+id/edit_country"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/edit_birthdate" />-->

        <ImageView
            android:id="@+id/img_banner"
            android:layout_width="408dp"
            android:layout_height="232dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_banner_one_piece" />

        <ImageView
            android:id="@+id/img_thumnail"
            android:layout_width="150dp"
            android:layout_height="230dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/img_banner"
            app:layout_constraintHorizontal_bias="0.158"
            app:layout_constraintStart_toStartOf="@+id/img_banner"
            app:layout_constraintTop_toTopOf="@+id/img_banner"
            app:layout_constraintVertical_bias="0.135"
            app:srcCompat="@drawable/ic_one_piece" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_thumnail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txt_title"
            app:layout_constraintTop_toBottomOf="@+id/img_banner"
            app:layout_constraintVertical_bias="0.214"
            tools:srcCompat="@drawable/ic_android_white_24dp" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="114dp"
            android:layout_height="28dp"
            android:layout_marginTop="36dp"
            android:text="@string/one_piece"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_24sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_thumnail"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_thumnail"
            app:layout_constraintTop_toBottomOf="@+id/img_banner"
            app:layout_constraintVertical_bias="0.271" />

        <Button
            android:id="@+id/button2"
            android:layout_width="110dp"
            android:layout_height="47dp"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:text="@string/rent"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_thumnail" />

        <Button
            android:id="@+id/button3"
            android:layout_width="110dp"
            android:layout_height="47dp"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:text="@string/buy"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/img_thumnail" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentage"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/familliarity"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:text="@string/lorem"
            android:padding="@dimen/dimen_12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>